category toolbar and bottom scrollbar fixes

--- a/src/app/categories/categories.scss
+++ b/src/app/categories/categories.scss
@@ -1,4 +1,8 @@
 .cat-container {
   height: 100%;
   display: flex;
+
+  &>div {
+    flex: 1 1 0;
+  }
 }
