--- a/src/app/categories/productGroupsList/productGroupListToolbar.scss
+++ b/src/app/categories/productGroupsList/productGroupListToolbar.scss
@@ -1,5 +1,4 @@
 .cat-product-group-list-toolbar-container {
-  margin-left:10px;
   margin-bottom:15px;
   margin-top:15px
 }
