--- a/src/app/categories/selectorBlock/selectorBlock.scss
+++ b/src/app/categories/selectorBlock/selectorBlock.scss
@@ -1,7 +1,7 @@
 .cat-selector-container {
-  width: 13%;
   margin-top: 15px;
   vertical-align: top;
+  max-width: 250px;
 }
 
 .cat-selector-container-inner {
