--- a/src/app/common/navbar/navbar.scss
+++ b/src/app/common/navbar/navbar.scss
@@ -2,6 +2,10 @@
   padding: 0px;
 }
 
+.navbar {
+  padding: 0.5rem;
+}
+
 .navbar-logo-image {
   width: 250px;
   height: 41px;
